--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-profile",
+  "name": "react_profile",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ajdavis2424/react-profile.git"
+    "url": "git+https://github.com/ajdavis2424/react_portfolio.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ajdavis2424/react-profile/issues"
+    "url": "https://github.com/ajdavis2424/react_portfolio/issues"
   },
-  "homepage": "https://github.com/ajdavis2424/react_profile#readme",
+  "homepage": "https://github.com/ajdavis2424/react_portfolio#readme",
   "dependencies": {
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
