--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
